[tool.poetry]
name = "whatsapp-members-extractor"
version = "0.1.0"
description = "Extract phone numbers from a WhatsApp Web community members list"
authors = ["daniel_almouiee"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.20"
webdriver-manager = "^4.0"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
flake8 = "^7.3.0"
mypy = "^1.20.1"
pytest = "^9.0.3"
pytest-cov = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scraper --cov-report=term-missing --cov-fail-under=70"
